--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vuelidate/validators": "^2.0.2",
     "@vuepic/vue-datepicker": "^4.3.0",
     "core-js": "^3.8.3",
+    "lightgallery": "^2.7.1",
     "lodash": "^4.17.21",
     "pinia": "^2.0.23",
     "roboto-fontface": "*",
