--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-router": "^4.0.0",
+    "vuelidate": "^0.7.7",
     "vuetify": "^3.0.0",
     "webfontloader": "^1.0.0"
   },
